Fixes on backend shoppingCart